sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:3: error: ')' expected but '<-' found.
  for ((i <- getValueCount()-2 to 0 by -1) {
          ^